WIP: Try updating to newer OpenJDK version
But it still doesn't work...