@@ -2,13 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.scijava</groupId>
-		<artifactId>pom-scijava</artifactId>
-		<version>39.0.0</version>
-		<relativePath />
-	</parent>
-
+	<groupId>org.scijava</groupId>
 	<artifactId>headless-awt</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
@@ -73,17 +67,25 @@
 	</ciManagement>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
 		<package-name>org.scijava.headless</package-name>
 		<premain-class>org.scijava.headless.HeadlessAgent</premain-class>
 
-		<license.licenseName>Unlicense</license.licenseName>
-		<license.copyrightOwners>None</license.copyrightOwners>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+
+		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
+		<javassist.version>3.30.2-GA</javassist.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
+			<version>${javassist.version}</version>
 		</dependency>
 		<!--
 		<dependency>
@@ -97,10 +99,30 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+						<arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
 				<configuration>
 					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+							<packageName>${package-name}</packageName>
+						</manifest>
 						<manifestEntries>
+							<Premain-Class>${premain-class}</Premain-Class>
+							<Implementation-Date>${maven.build.timestamp}</Implementation-Date>
 							<Can-Redefine-Classes>true</Can-Redefine-Classes>
 							<Can-Retransform-Classes>true</Can-Retransform-Classes>
 							<Boot-Class-Path>javassist-${javassist.version}.jar</Boot-Class-Path>
